--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [package]
 name = "voight_kampff"
+homepage = "https://github.com/TQTheNeck/voight_kampff-rs"
+repository = "https://github.com/TQTheNeck/voight_kampff-rs"
+description = "A user agent checker"
+readme = "README.md"
+license = "MIT"
 version = "0.1.0"
 authors = ["TQ <TQTheNeck@gmail.com>"]
 edition = "2018"
